--- a/每周的题解/第一周.md
+++ b/每周的题解/第一周.md
@@ -1,11 +1,8 @@
 # 题解
 
-这里的顺序也是按出现频率的~
-
-## 3. 无重复字符的最长子串
+## 3. 无重复字符的最长子串|中等、高频
 
 - [ leetcode](https://leetcode.cn/problems/longest-substring-without-repeating-characters/)
--
 
 ### 解题思路
 
@@ -53,7 +50,7 @@ var lengthOfLongestSubstring = function(s) {
 
 ```
 
-## 20. 有效的括号
+## 20. 有效的括号|简单、高频
 
 ### 解题思路
 
@@ -126,9 +123,9 @@ var isValid = function(s) {
 };
 ```
 
-![image-20220516171807311](https://gitee.com/okkjoo/image-bed/raw/master/imgs/image-20220516171807311.png
 
-## 4. 寻找两个正序数组的中位数
+
+## 4. 寻找两个正序数组的中位数|困难、低频
 
 ### 解题思路
 
@@ -216,5 +213,43 @@ var findMedianSortedArrays = function(nums1, nums2) {
         }
     }
 };
+```
+
+## [1. 两数之和](https://leetcode.cn/problems/two-sum/)|简单、高频
+
+### 解题思路
+
+#### 暴力
+最容易想到的就是两层for来遍历，得到满足条件的两个整数
+没什么好说的，也当然是必须优化的
+时间O(n^2)，空间O(1)
+#### Map
+用 Map 记录遍历过的值以及对应下标，同时当前遍历到的值为 value，判断（ target - value） 是否记录过在Map 中
+
+⭐：
+- 求和 --> 求差
+- Map 记录值与下标的映射
+- 空间换时间
+
+ 时间O(1),空间O(n)
+
+### 代码
+
+```js
+/**
+ * @param {number[]} nums
+ * @param {number} target
+ * @return {number[]}
+ */
+var twoSum = function (nums, target) {
+	const mp = new Map();
+	for (let i = 0; i < nums.length; i++) {
+		const v = nums[i];
+		const diff = target - v;
+		if (mp.has(diff)) return [mp.get(diff), i];
+		mp.set(v, i);
+	}
+};
+
 ```
 
