88. 合并两个有序数组

--- a/每周的题解/第一周.md
+++ b/每周的题解/第一周.md
@@ -253,3 +253,65 @@ var twoSum = function (nums, target) {
 
 ```
 
+## [88. 合并两个有序数组](https://leetcode-cn.com/problems/merge-sorted-array)|简单、高频
+
+### 解题思路
+
+#### 暴力
+没做过的第一个想法肯定是将num2放到num1后面，然后再一起进行排序
+
+但这显然就用不到两个数组一开始就是有序的特征了
+
+#### 归并排序
+复习一下归并排序的步骤：
+1. 申请空间，使其大小为两个已经排序序列之和，该空间用来存放合并后的序列；
+2. 设定两个指针，最初位置分别为两个已经排序序列的起始位置；
+3. 比较两个指针所指向的元素，选择相对小的元素放入到合并空间，并移动指针到下一位置；
+4. 重复步骤 3 直到某一指针达到序列尾；
+5. 将另一序列剩下的所有元素直接复制到合并序列尾。
+
+关键在于第三步~
+比较两个数组头元素然后将较小的推至最终数组，并将其从原数组中吐出去，不断循环，直到两个数组都为空
+
+但值得注意的是 题目圆球 不返回一个新数组，而是存储再数组num1中，也就是要求原地修改，不能申请多的空间~  为此，题目里说了 num1 的初始长度为 m+n，后n个元素为0
+
+那么我们可以从后往前比较，从后面插入即可，用三个指针模拟
+- cur：记录当前到那个位置
+- m：记录 num1 数组处理到哪里
+- n：记录 num2 数组处理到哪里
+
+时间复杂度O(n) 空间复杂度O(1)
+
+### 代码
+
+```js
+/**
+ * @param {number[]} nums1
+ * @param {number} m
+ * @param {number[]} nums2
+ * @param {number} n
+ * @return {void} Do not return anything, modify nums1 in-place instead.
+ */
+var merge = function(nums1, m, nums2, n) {
+    let cur = m + n - 1 //从nums1尾部开始
+    while(cur >= 0){
+        if(n===0)return //num2已经全部放入num1中了
+        if(m < 1){//num1指针先走完了
+            nums1[cur--] = nums2[--n]
+            continue
+        }
+        if(n < 1){//num2指针先走完了
+            nums1[cur--] = nums1[--m]
+            continue
+        }
+        //取较大的插入 nums1 的末尾、更新对应的指针
+        if(nums1[m - 1] > nums2[n - 1]){
+            nums1[cur--] = nums1[--m]
+        }else {
+            nums1[cur--] = nums2[--n]
+        }
+    }
+};
+
+```
+
