415. 字符串相加

--- a/每周的题解/第一周.md
+++ b/每周的题解/第一周.md
@@ -315,3 +315,46 @@ var merge = function(nums1, m, nums2, n) {
 
 ```
 
+## [415. 字符串相加](https://leetcode.cn/problems/add-strings/)|简单、高频
+
+### 解题思路
+
+#### 直接模拟
+对两个非负整数进行 竖式计算 的模拟即可
+将相同数位对齐，从低到高逐位相加，如果当前位和超过 1010，则向高位进一位
+双指针从数的末尾即最低位开始，逐位相加，记录进位到 add 变量中
+较少位的那一个数就在前面补零
+
+⭐：
+
+- `num1.charAt(i) - '0'`将一个数字字符转为数字
+- 最后要`reverse`才是正确顺序的结果
+- 再用`join`将数组转为字符串
+
+时间复杂度O(n)，空间复杂度O(1)
+
+### 代码
+
+```js
+/**
+ * @param {string} num1
+ * @param {string} num2
+ * @return {string}
+ */
+var addStrings = function(num1, num2) {
+    let i = num1.length - 1, 
+        j = num2.length - 1
+        add = 0
+    const ans = []
+    while(i >= 0 || j >= 0 || add > 0){
+        const a = i >= 0 ? num1[i].charAt() - '0' : 0,
+              b = j >= 0 ? num2[j].charAt() - '0' : 0
+        const res = a + b + add
+        ans.push(res % 10)
+        add = Math.floor(res / 10)
+        i--,j--
+    }
+    return ans.reverse().join('')
+};
+```
+
