165. 比较版本号

--- a/每周的题解/第一周.md
+++ b/每周的题解/第一周.md
@@ -358,3 +358,66 @@ var addStrings = function(num1, num2) {
 };
 ```
 
+## 165. 比较版本号|中等、高频
+
+### 解题思路
+
+#### 最方便的字符串切割
+
+利用 `split('.')`将版本号字符串切割为数组，从下标为0开始依次比对：
+
+时间复杂度O(n)，空间复杂度O(n)
+
+```js
+/**
+ * @param {string} version1
+ * @param {string} version2
+ * @return {number}
+ */
+var compareVersion = function(version1, version2) {
+    const v1 = version1.split('.')
+          v2 = version2.split('.')
+     for (let i = 0; i < v1.length || i < v2.length; ++i) {
+        let x = 0, y = 0;
+        if (i < v1.length) x = parseInt(v1[i]);   
+        if (i < v2.length) y = parseInt(v2[i]);  
+        if (x !== y)return x > y ? 1 : -1;
+    }
+    return 0;
+};
+```
+
+#### 空间优化
+
+我们可以不降其切割后放入数组再进行逐一比对，而是在切割时就进行逐一比对
+
+### 代码
+
+```js
+/**
+ * @param {string} version1
+ * @param {string} version2
+ * @return {number}
+ */
+var compareVersion = function (version1, version2) {
+	const n = version1.length,
+		m = version2.length;
+	let i = 0,
+		j = 0; //双指针
+	while (i < n || j < m) {
+		let a = 0, b = 0; //同一下标下的两个修订号
+		for (; i < n && version1[i] !== "."; ++i) {
+			a = a * 10 + version1[i] - "0";
+		}
+		++i; // 跳过点号
+		for (; j < m && version2[j] !== "."; ++j) {
+			b = b * 10 + version2[j] - "0";
+		}
+		++j; // 跳过点号
+		if (a !== b) return a > b ? 1 : -1;
+	}
+	return 0;
+};
+
+```
+
