70. 爬楼梯|简单、中频

--- a/每周的题解/第一周.md
+++ b/每周的题解/第一周.md
@@ -421,3 +421,121 @@ var compareVersion = function (version1, version2) {
 
 ```
 
+## 70. 爬楼梯|简单、中频
+
+### 解题思路
+
+#### 动态规划
+
+f(x) 表示爬到第x级阶梯的方案数，由每次可走一步或两步可知
+
+- 转移条件为：`f(x)=f(x-1)+f(x-2)`
+- 初始化：`f(0)=1、f(1)=1`，到第0级和第1级的方案数都是1
+
+那么我们对`f[]`数组从2开始的遍历即可
+
+```js
+for(let i = 2; i <=n; i++){
+    f[i] = f[i-1] + f[i-2];
+}
+return f[n]
+```
+
+这样的时间复杂度和空间复杂度都是`O(n)`
+
+我们发现，`f(x)`只与`f(x-1)`和`f(x-2)`有关，也就是与`f(x-2)`之前的东西再无瓜葛，最后要求的结果也只是`f(x)`再利用滚动数组思想优化一下：直接用三个变量存储关键的东西就行了
+
+```js
+var climbStairs = function(n) {
+    let p = 0, q = 0, r = 1;
+    for (let i = 1; i <= n; ++i) {
+        p = q;
+        q = r;
+        r = p + q;
+    }
+    return r;
+};
+```
+
+现在时间复杂度为O(n)，空间复杂度为O(1)
+
+但这种dp的入门题，还用dp就有点low了（卷，就嗯卷）
+
+### 矩阵快速幂
+
+用这个方法需要对线性代数有了解，但如果只是想看懂我的题解的话，也不需要特别多
+
+- 矩阵乘法：一句话总结，就是矩阵C 内第1行第1列的元素 = 矩阵A第一行元素 与 矩阵 B第一列元素**对应各项相乘再累加**后得到的
+
+也算有关于数论吧
+
+快速幂
+
+```cpp
+//a^n
+while(n>0)
+{
+    if(n&1) res*=a;
+    n>>=1;
+    a=a*a;
+}
+```
+
+对于n次幂，对n二进制话，二进制位上位1 的话就相乘，然后一直将n右移
+
+#### 什么时候可以用矩阵快速幂
+
+矩阵快速幂的使用相较于dp可能没那么好看出来——也可能只是我相比这个来说dp比较熟悉
+
+- 问题可转换为求解矩阵的n次方
+  - 结合快速幂优化效率
+- 递归式形如齐次线性递推式
+  - 就可以构造出矩阵n次方再乘一个列向量a得到一个列向量b，且列向量b中包含我们需要的f(x)
+- 递归式可以转换为齐次线性递推式
+
+这道题目中的转移条件`f(x)=f(x-1)+f(x-2)`就是上面的第二种情况：递归式形如其次线性递归式
+
+这个方法的时间复杂度为O(logn)
+
+**如果你觉得难的话，其实只学dp也行，这个方法讲个思路应该也不错了...**
+
+### 代码
+
+最终代码如下：
+
+```js
+/**
+ * @param {number} n
+ * @return {number}
+ */
+var climbStairs = function(n) {
+    const q = [[1, 1], [1, 0]];
+    const res = pow(q, n);
+    return res[0][0];
+};
+
+const pow = (a, n) => {
+    let ret = [[1, 0], [0, 1]];
+    while (n > 0) {
+        if ((n & 1) === 1) {
+            ret = multiply(ret, a);
+        }
+        n >>= 1;
+        a = multiply(a, a);
+    }
+    return ret;
+}
+
+const multiply = (a, b) => {
+    const c = new Array(2).fill(0).map(() => new Array(2).fill(0));
+    for (let i = 0; i < 2; i++) {
+        for (let j = 0; j < 2; j++) {
+            c[i][j] = a[i][0] * b[0][j] + a[i][1] * b[1][j];
+        }
+    }
+    return c;
+}
+```
+
+
+
