46.全排列|中等、高频

--- a/每周的题解/第一周.md
+++ b/每周的题解/第一周.md
@@ -153,7 +153,7 @@ var isValid = function(s) {
 
 2. 有序——二分查找
 
-3. 对小的那个数组进行二分，确定一个 i，自然就能得到 j，因为最后的找到中位数的情况就是 `i(i+1) + (j+1) == (m + n + 1) / 2`
+3. 对小的那个数组进行二分，确定一个 i，自然就能得到 j，因为最后的找到中位数的情况就是 `(i+1) + (j+1) == (m + n + 1) / 2`
 
 其中m、n分别两个数组的大小
 
@@ -535,6 +535,49 @@ const multiply = (a, b) => {
     }
     return c;
 }
+```
+
+
+
+## [46. 全排列](https://leetcode-cn.com/problems/permutations)|中等、高频
+
+### 解题思路
+
+求全排列问题需要的前置知识：回溯~
+
+以`[1,2,3]`为例
+
+1. 从中选一个数a
+2. 再选一个数，且该数不能为选过的数
+3. 重复，直到选完所有的数
+
+那么关键就在于 怎么判定该数选没选过，如果用多一个 map 专门判断，判断的时间复杂度为O(1)，但是要用到额外的空间O(n)，但是本来就需要用到 tmpList 存储临时结果，所以直接用自带的 includes 线性查找判断就好了
+
+总体的时间复杂度还是O(n)，空间复杂度O(n)
+
+### 代码
+
+```js
+// 回溯函数
+function backtrack(lists, tmpList, nums){
+    if(tmpList.length === nums.length) return lists.push([...tmpList])
+    for(let i = 0; i < nums.length; i++){
+        if(tmpList.includes(nums[i])) continue
+        tmpList.push(nums[i])
+        backtrack(lists, tmpList, nums)
+        tmpList.pop() //回溯
+    }    
+
+}
+/**
+ * @param {number[]} nums
+ * @return {number[][]}
+ */
+var permute = function(nums) {
+    const lists = []
+    backtrack(lists, [], nums)
+    return lists
+};
 ```
 
 
