53. 最大子序和

--- a/每周的题解/第一周.md
+++ b/每周的题解/第一周.md
@@ -580,5 +580,79 @@ var permute = function(nums) {
 };
 ```
 
+## [53. 最大子序和](https://leetcode-cn.com/problems/maximum-subarray)|简单、高频
 
+### 解题思路
+
+#### 暴力
+
+计算所有`[i...j]`和，留最大的`max`作为答案。
+
+时间复杂度 `O(n^2)`，空间复杂度`O(1)`
+
+代码就不写了，就是二重循环
+
+#### 动态规划 dp
+
+想办法把他拆解为规模小一点的子问题~
+
+用`dp[i]`表示末尾下标为`i`子序列中最大之和。
+
+- 最后答案就是`{dp[i]|i∈[0,1,2,n-1]}`中最大值，这个在遍历`dp[i]`的时候就可以存下来
+- 那么已知`dp[i-1]`要怎么推出`dp[i]`呢
+  - `dp[i] = dp[i-1] + nums[i]`
+  - 但是注意：有可能`dp[i-1]`是一个复数，那还不如不加呢。所以也可能是`dp[i] = nums[i]`
+
+现在时间复杂度`O(n)`，空间复杂度`O(n)`。我们还能优化一下，不新建`dp[]`数组，直接在传入的`nums[]`上操作，空间复杂度为`O(1)`
+
+### 动态规划代码
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {number}
+ */
+var maxSubArray = function(nums) {
+    const len = nums.length
+    let mx = nums[0]
+    for(let i = 1; i < len; i++){
+        nums[i] = Math.max(0, nums[i-1]) + nums[i]
+        if(nums[i] > mx)mx = nums[i]
+    }
+    return mx
+};
+```
+
+
+
+#### 前缀和
+
+前缀和，一种降低查询操作复杂度的预处理手段，一句话概述的话就是这样：让`s[i]`记录下标从0到i的和，那么`[i, j]`的和就等于`s[j] - s[i-1]`
+
+那么在这里该怎么结合在一起？
+
+当`s[i]`是`s[0],s[1],...s[j-1]`最小值的时候，`s[j]-s[i]`就是以 j 为下标的子序列之和的最大值了
+
+我们这里只需要临时存储`s[i]` 就好了，所以直接用`sum` 变量就行
+
+时间复杂度为`O(n)`，空间复杂度为`O(1)`
+
+### 前缀和代码
+
+```js
+/**前缀和
+ * @param {number[]} nums
+ * @return {number}
+ */
+var maxSubArray = function(nums) {
+  const len = nums.length
+    let mx = nums[0], mn = 0, sum = 0
+    for(let i = 0;i < len; i++){
+        sum += nums[i]
+        if(sum - mn > mx) mx = sum - mn
+        if(sum < mn) mn = sum
+    }
+    return mx
+};
+```
 
