112.路径总和|简单、高频

--- a/每周的题解/第一周.md
+++ b/每周的题解/第一周.md
@@ -656,3 +656,73 @@ var maxSubArray = function(nums) {
 };
 ```
 
+## [112. 路径总和](https://leetcode-cn.com/problems/path-sum)|容易、高频
+
+### 题目描述
+
+> 给你二叉树的根节点 root 和一个表示目标和的整数 targetSum 。判断该树中是否存在 根节点到叶子节点 的路径，这条路径上所有节点值相加等于目标和 targetSum 。如果存在，返回 true ；否则，返回 false 。
+>
+> 叶子节点 是指没有子节点的节点。
+>
+
+### 解题思路
+
+>  这题形式上有点像两数之和有没有
+
+看到这样的一个二叉树，我们可以想到使用深度优先搜索 dfs，来做这道题目。这里前中后序都无所谓
+
+那么 dfs 递归函数的参数就应该是
+
+- 二叉树的节点
+- 一个用于判断是否达到目标和的计数器
+  - 如果用加法就比较麻烦，每一处都需要传入 targetSum 来在函数体内判断，我们可以用减法，第一次调用传入的是 targetSum ，后面判断是否为0就ok了
+
+因为只需要搜索其中一条符合条件的路径，那么递归函数就需要一个返回值，当遇到合适的路径就及时返回，不要再继续搜索了
+
+⭐：
+
+- 节点的值可以为负，所以也不能剪枝，必须遍历完一整条路径
+
+### 代码
+
+```js
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val, left, right) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.left = (left===undefined ? null : left)
+ *     this.right = (right===undefined ? null : right)
+ * }
+ */
+/**
+ * @param {TreeNode} root
+ * @param {number} targetSum
+ * @return {boolean}
+ */
+// var hasPathSum = function(root, targetSum) {
+//     const traversal = (node, cnt) =>{
+//         if(cnt === 0 && !node.left && !node.right) return true // 找到符合题意的叶子节点
+//         if(!node.left && !node.right) return false //不合适的叶子节点就直接返回
+//         // 往左右子节点找(如果子节点不为空的话)
+//         if(node.left && traversal(node.left, cnt - node.left.val)) return true
+//         if(node.right && traversal(node.right, cnt - node.right.val)) return true
+//         return false //都没找到合适的就 false
+//     }
+//     if(!root) return false //空树
+//     return traversal(root, targetSum - root.val)
+// };
+//将上面的 traversal 融合进来，简化代码
+var hasPathSum = function(root, targetSum) {
+    if(!root) return false
+    if(!root.left && !root.right && targetSum === root.val) return true
+    return (
+        hasPathSum(root.left, targetSum - root.val) ||
+        hasPathSum(root.right, targetSum - root.val)
+    );
+};
+```
+
+
+
+
+
