--- a/每周的题解/第一周.md
+++ b/每周的题解/第一周.md
@@ -1,12 +1,20 @@
-# 题解
+# 带你JS 刷高频面试算法题|第一周|okkjoo-leetcodeHot-byJs
 
-## 3. 无重复字符的最长子串|中等、高频
+> 本周刷了11道~
 
-- [ leetcode](https://leetcode.cn/problems/longest-substring-without-repeating-characters/)
+`okkjoo-leetcodeHot-byJs`带你用 JS 刷高频面试算法题~ 每周日更新~ 合集仓库：[okkjoo-leetcodeHot-byJs](https://github.com/okkjoo/okkjoo-leetcodeHot-byJs)
+
+这是第一周的刷题记录与题解分享，如果你已经按题型分类系统地刷了一遍算法面试题的各个题型，想感受一下面试题的”随机性”的话，欢迎一起~
+
+## [3. 无重复字符的最长子串](https://leetcode.cn/problems/longest-substring-without-repeating-characters/)|中等、高频
+
+### 题目描述
+
+> 给定一个字符串 `s` ，请你找出其中不含有重复字符的 **最长子串** 的长度。
 
 ### 解题思路
 
-最长子串——看到这两个关键字你就要想到滑动窗口，那么这道题就是窗口大小无限制的滑动窗口~ 滑动窗口具体控制就是双指针啦
+无重复+最长子串——看到这两个个关键字你就要想到滑动窗口，那么这道题就是窗口大小无限制的滑动窗口~ 滑动窗口具体控制就是双指针啦
 
 然后需要求得的就是 满足条件（不含重复字符）的窗口中，最大的窗口。
 
@@ -52,11 +60,20 @@ var lengthOfLongestSubstring = function(s) {
 
 ## 20. 有效的括号|简单、高频
 
+### 题目描述
+
+> 给定一个只包括 '('，')'，'{'，'}'，'['，']' 的字符串 s ，判断字符串是否有效。
+>
+> 有效字符串需满足：
+>
+> 左括号必须用相同类型的右括号闭合。
+> 左括号必须以正确的顺序闭合。
+
 ### 解题思路
 
 括号问题，常考的就是栈的运用与操作了~
 
-遍历字符串s
+遍历字符串s，分情况讨论：
 
 - 拿到左括号：
   - 压入栈中
@@ -73,17 +90,11 @@ var lengthOfLongestSubstring = function(s) {
 
 遍历完之后，如果栈中还有括号，就说明有左括号没有右括号来与之配对，`return false`
 
-
-
 扩展：
 
 也可以通过设置计数器变量存储左右括号出现次数来进行判断
 
-
-
 pps：只有一种括号类型的时候才可以使用计数器这个方法:`（（））`，如果不止一种括号，可能就会有些样例过不了，所以这个方法是无效的，例如这种示例4`([)]'`，没有以正确的顺序闭合。
-
-
 
 ⭐：
 
@@ -126,6 +137,13 @@ var isValid = function(s) {
 
 
 ## 4. 寻找两个正序数组的中位数|困难、低频
+
+### 题目描述
+
+> 给定两个大小分别为 m 和 n 的正序（从小到大）数组 nums1 和 nums2。请你找出并返回这两个正序数组的 中位数 。
+>
+> 算法的时间复杂度应该为 O(log (m+n)) 。
+>
 
 ### 解题思路
 
@@ -215,7 +233,18 @@ var findMedianSortedArrays = function(nums1, nums2) {
 };
 ```
 
+
+
 ## [1. 两数之和](https://leetcode.cn/problems/two-sum/)|简单、高频
+
+### 题目描述
+
+> 给定一个整数数组 nums 和一个整数目标值 target，请你在该数组中找出 和为目标值 target  的那 两个 整数，并返回它们的数组下标。
+>
+> 你可以假设每种输入只会对应一个答案。但是，数组中同一个元素在答案里不能重复出现。
+>
+> 你可以按任意顺序返回答案。
+>
 
 ### 解题思路
 
@@ -224,7 +253,7 @@ var findMedianSortedArrays = function(nums1, nums2) {
 没什么好说的，也当然是必须优化的
 时间O(n^2)，空间O(1)
 #### Map
-用 Map 记录遍历过的值以及对应下标，同时当前遍历到的值为 value，判断（ target - value） 是否记录过在Map 中
+用 Map 记录遍历过的值以及对应下标，同时当前遍历到的值为 `value`，判断`（ target - value）` 是否记录过在Map 中
 
 ⭐：
 - 求和 --> 求差
@@ -255,12 +284,21 @@ var twoSum = function (nums, target) {
 
 ## [88. 合并两个有序数组](https://leetcode-cn.com/problems/merge-sorted-array)|简单、高频
 
+### 题目描述
+
+> 给你两个按 非递减顺序 排列的整数数组 nums1 和 nums2，另有两个整数 m 和 n ，分别表示 nums1 和 nums2 中的元素数目。
+>
+> 请你 合并 nums2 到 nums1 中，使合并后的数组同样按 非递减顺序 排列。
+>
+> 注意：最终，合并后数组不应由函数返回，而是存储在数组 nums1 中。为了应对这种情况，nums1 的初始长度为 m + n，其中前 m 个元素表示应合并的元素，后 n 个元素为 0 ，应忽略。nums2 的长度为 n 
+>
+
 ### 解题思路
 
 #### 暴力
 没做过的第一个想法肯定是将num2放到num1后面，然后再一起进行排序
 
-但这显然就用不到两个数组一开始就是有序的特征了
+但这显然就用不到两个数组**一开始就是有序的**特征了
 
 #### 归并排序
 复习一下归并排序的步骤：
@@ -273,7 +311,7 @@ var twoSum = function (nums, target) {
 关键在于第三步~
 比较两个数组头元素然后将较小的推至最终数组，并将其从原数组中吐出去，不断循环，直到两个数组都为空
 
-但值得注意的是 题目圆球 不返回一个新数组，而是存储再数组num1中，也就是要求原地修改，不能申请多的空间~  为此，题目里说了 num1 的初始长度为 m+n，后n个元素为0
+但值得注意的是 题目要求 不返回一个新数组，而是存储再数组num1中，也就是**要求原地修改**，不能申请多的空间~  为此，题目里说了 num1 的初始长度为 m+n，后n个元素为0
 
 那么我们可以从后往前比较，从后面插入即可，用三个指针模拟
 - cur：记录当前到那个位置
@@ -317,6 +355,13 @@ var merge = function(nums1, m, nums2, n) {
 
 ## [415. 字符串相加](https://leetcode.cn/problems/add-strings/)|简单、高频
 
+### 题目描述
+
+> 给定两个字符串形式的非负整数 num1 和num2 ，计算它们的和并同样以字符串形式返回。
+>
+> 你不能使用任何內建的用于处理大整数的库（比如 BigInteger）， 也不能直接将输入的字符串转换为整数形式。
+>
+
 ### 解题思路
 
 #### 直接模拟
@@ -358,7 +403,21 @@ var addStrings = function(num1, num2) {
 };
 ```
 
-## 165. 比较版本号|中等、高频
+## [165. 比较版本号](https://leetcode.cn/problems/compare-version-numbers/)|中等、高频
+
+### 题目描述
+
+> 给你两个版本号 version1 和 version2 ，请你比较它们。
+>
+> 版本号由一个或多个修订号组成，各修订号由一个 '.' 连接。每个修订号由 多位数字 组成，可能包含 前导零 。每个版本号至少包含一个字符。修订号从左到右编号，下标从 0 开始，最左边的修订号下标为 0 ，下一个修订号下标为 1 ，以此类推。例如，2.5.33 和 0.1 都是有效的版本号。
+>
+> 比较版本号时，请按从左到右的顺序依次比较它们的修订号。比较修订号时，只需比较 忽略任何前导零后的整数值 。也就是说，修订号 1 和修订号 001 相等 。如果版本号没有指定某个下标处的修订号，则该修订号视为 0 。例如，版本 1.0 小于版本 1.1 ，因为它们下标为 0 的修订号相同，而下标为 1 的修订号分别为 0 和 1 ，0 < 1 。
+>
+> 返回规则如下：
+>
+> 如果 version1 > version2 返回 1，
+> 如果 version1 < version2 返回 -1，
+> 除此之外返回 0。
 
 ### 解题思路
 
@@ -422,6 +481,12 @@ var compareVersion = function (version1, version2) {
 ```
 
 ## 70. 爬楼梯|简单、中频
+
+### 题目描述
+
+> 假设你正在爬楼梯。需要 `n` 阶你才能到达楼顶。
+>
+> 每次你可以爬 `1` 或 `2` 个台阶。你有多少种不同的方法可以爬到楼顶呢？
 
 ### 解题思路
 
@@ -541,6 +606,10 @@ const multiply = (a, b) => {
 
 ## [46. 全排列](https://leetcode-cn.com/problems/permutations)|中等、高频
 
+### 题目描述
+
+> 给定一个不含重复数字的数组 `nums` ，返回其 *所有可能的全排列* 。你可以 **按任意顺序** 返回答案。
+
 ### 解题思路
 
 求全排列问题需要的前置知识：回溯~
@@ -581,6 +650,12 @@ var permute = function(nums) {
 ```
 
 ## [53. 最大子序和](https://leetcode-cn.com/problems/maximum-subarray)|简单、高频
+
+### 题目描述
+
+> 给你一个整数数组 `nums` ，请你找出一个具有最大和的连续子数组（子数组最少包含一个元素），返回其最大和。
+>
+> **子数组** 是数组中的一个连续部分。
 
 ### 解题思路
 
@@ -715,14 +790,22 @@ var maxSubArray = function(nums) {
 var hasPathSum = function(root, targetSum) {
     if(!root) return false
     if(!root.left && !root.right && targetSum === root.val) return true
-    return (
-        hasPathSum(root.left, targetSum - root.val) ||
-        hasPathSum(root.right, targetSum - root.val)
-    );
+   return (
+		hasPathSum(root.left, targetSum - root.val) ||
+		hasPathSum(root.right, targetSum - root.val)
+	);
 };
 ```
 
 
 
+---
 
+# 在最后
+
+好了这就是本周的刷题记录与题解分享了，如果你已经按题型分类系统地刷了一遍算法面试题的各个题型，想感受一下面试题的”随机性”的话，欢迎一起~
+
+合集仓库：[okkjoo-leetcodeHot-byJs](https://github.com/okkjoo/okkjoo-leetcodeHot-byJs)
+
+> 🌊如果有所帮助，欢迎点赞关注，一起进步⛵
 
