15. 三数之和|中等、高频

--- a/每周的题解/第二周.md
+++ b/每周的题解/第二周.md
@@ -1,4 +1,4 @@
-# 带你JS 刷高频面试算法题|第一周|okkjoo-leetcodeHot-byJs
+# 带你用JS 刷高频面试算法题|第一周|okkjoo-leetcodeHot-byJs
 
 `okkjoo-leetcodeHot-byJs`带你用 JS 刷高频面试算法题~ 每周日更新~ 合集仓库：[okkjoo-leetcodeHot-byJs](https://github.com/okkjoo/okkjoo-leetcodeHot-byJs)
 
@@ -135,4 +135,65 @@ var levelOrder = function(root) {
 
 
 > 也可以每次都存储队列当前的长度作为该层的个数，就不用 null 作为结束标志了，在 while 里面用 for 根据队列长度遍历
+
+## [15. 三数之和](https://leetcode-cn.com/problems/3sum)|中等、高频
+
+### 题目描述
+
+>  给你一个包含 n 个整数的数组 nums，判断 nums 中是否存在三个元素 a，b，c ，使得 a + b + c = 0 ？请你找出所有和为 0 且不重复的三元组。
+>
+> 注意：答案中不可以包含重复的三元组。
+
+### 解题思路
+
+要是直接暴力，那可就是O(n^3)的时间复杂度，没人顶得住~
+
+ok，那我们先剩下一个n，我们可以直接认为 `nums` 中的每一项 `nums[i]` 都能成为 三数中的一数，所以我们现在就可以将问题转换为 `两数之和 = 0 - nums[i]`，那看来模仿第一道题两数之和就能以 O(n) 的复杂度通过了。
+
+no，这道题所求的组数不止是一组，那一道两数之和只要求一组，所以才能找到的时候就 return
+
+还有一个要注意的点：不重复的三元组，怎么样保证不重复？
+
+- 前面循环得到的元素不小于后面循环得到的元素，当然不大于也可以，只要有序就行
+
+ok，我们就选不小于，所以要求最后的三元组`[a, b, c]`，要满足  `a <= b <= c`。那么首先就要先对数组排一下序，排序算法时间复杂度为O(nlogn)
+
+然后再用双指针遍历~
+
+最终时间复杂度为O(n^2)，空间复杂度没什么消耗，主要在于排序算法可能会消耗空间
+
+### 代码
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {number[][]}
+ */
+var threeSum = function(nums) {
+    //特例
+    if(nums.length < 3) return []
+    const res = []
+    nums.sort((a, b) => a - b) //升序
+    for(let i = 0; i < nums.length; i++){
+        if(nums[i] > 0) break; //升序的数组，她大于0就不会后面的加上他能等于0了
+        if(i > 0 && nums[i] === nums[i - 1]) continue //一样就跳过，避免重复三元组
+        //双指针
+        let left = i + 1, right = nums.length - 1
+        while(left < right){ // 保证 i < left < right
+            if(nums[left] + nums[right] + nums[i] === 0){//找到合适的
+                res.push([nums[i], nums[left], nums[right]])
+                //跳过重复的
+                while(nums[left] === nums[left + 1]) left++
+                left++
+                while(nums[right] === nums[right + 1]) right--
+                right--
+             // 不符合的根据情况调整
+            }else if(nums[left] + nums[right] + nums[i] > 0){
+                right--
+            }else left++
+        }
+    }
+    return res
+};
+```
 
