--- a/每周的题解/第二周.md
+++ b/每周的题解/第二周.md
@@ -197,3 +197,170 @@ var threeSum = function(nums) {
 };
 ```
 
+## [215. 数组中的第K个最大元素](https://leetcode.cn/problems/kth-largest-element-in-an-array/)|中等、高频
+
+### 题目描述
+
+> 给定整数数组 `nums` 和整数 `k`，请返回数组中第 k 个最大的元素。
+>
+> 请注意，你需要找的是数组排序后的第 `k` 个最大的元素，而不是第 `k` 个不同的元素。
+
+### 解题思路
+
+#### 直接排序
+
+最直观的就是直接排序，然后选择下标为k的就好了
+
+时间复杂度O(nlogn)
+
+#### 小顶堆
+
+维护一个大小为 k 的小顶堆，当堆大小大于 k ，就删除堆顶。等遍历完数组的时候，堆顶就是第k大的元素了
+
+时间复杂度O(nlogk)，空间复杂度O(k)
+
+#### 快速选择
+
+快选有点像快排，就是找基准，然后将大于他的放一边，小于他的放一边。如果大于他的树有 k-1 个，那他自然就是第 k 个大的。
+
+时间复杂度平均为O(n)，最坏为O(n^2)
+
+### 代码
+
+#### 小顶堆
+
+```js
+/**
+ * @param {number[]} nums
+ * @param {number} k
+ * @return {number}
+ */
+class MinHeap {
+    constructor() {
+        this.heap = [];
+    }
+    swap(i1, i2) {
+        [this.heap[i1], this.heap[i2]] = [this.heap[i2], this.heap[i1]];
+    }
+    getParentIndex(i) {
+        return (i - 1) >> 1;
+    }
+    getleftIndex(i) {
+        return 2 * i + 1;
+    }
+    getrightIndex(i) {
+        return 2 * i + 2;
+    }
+    shiftUp(index) {
+        if (index === 0) return;
+        const parentIndex = this.getParentIndex(index);
+        if (this.heap[parentIndex] > this.heap[index]) {
+            this.swap(parentIndex, index);
+            this.shiftUp(parentIndex);
+        }
+    }
+    shiftDown(index) {
+        const leftIndex = this.getleftIndex(index);
+        const rightIndex = this.getrightIndex(index);
+        if (this.heap[leftIndex] < this.heap[index]) {
+            this.swap(leftIndex, index);
+            this.shiftDown(leftIndex);
+        }
+        if (this.heap[rightIndex] < this.heap[index]) {
+            this.swap(rightIndex, index);
+            this.shiftDown(rightIndex);
+        }
+    }
+    insert(value) {
+        this.heap.push(value);
+        this.shiftUp(this.heap.length - 1);
+    }
+    pop() {
+        // pop删除数组最后一个元素并返回，赋值给堆顶
+        this.heap[0] = this.heap.pop();
+        // 对堆顶重新排序
+        this.shiftDown(0);
+    }
+    peek() {
+        return this.heap[0];
+    }
+    size() {
+        return this.heap.length;
+    }
+}
+
+const findKthLargest = (nums, k) => {
+    const minHeap = new MinHeap();
+    nums.forEach(n => {
+        // 将数组元素依次插入堆中
+        minHeap.insert(n);
+        // 如果堆大小超过k，将堆顶(最小) 的去掉
+        if (minHeap.size() > k) {
+            minHeap.pop();
+        }
+    })
+    // 返回堆顶，此时就是第k大的元素
+    return minHeap.peek();
+};
+```
+
+#### 快速选择
+
+```js
+/**
+ * @param {number[]} nums
+ * @param {number} k
+ * @return {number}
+ */
+const findKthLargest = (nums, k) => {
+    const n = nums.length;
+
+    const quick = (l, r) => {
+        if (l > r) return;//递归终止条件
+        let random = Math.floor(Math.random() * (r - l + 1)) + l; //随机选一个索引
+        swap(nums, random, r); //将它和位置r的元素交换，让nums[r]作为基准元素
+
+        //对基准元素进行partition
+        let pivotIndex = partition(nums, l, r);
+        /*
+          partition之后，基准左边的都小于它 右边的都大于它
+          基准元素的位置pivotIndex正好是n-k 则找大了第k大的数
+          如果n-k<pivotIndex,说明偏大了，去pivotIndex的左边递归查找
+          如果n-k>pivotIndex，说明偏小了，去pivotIndex的右边递归查找
+        */
+        if (n - k < pivotIndex) {
+            quick(l, pivotIndex - 1);
+        } else {
+            quick(pivotIndex + 1, r);
+        }
+    };
+
+    quick(0, n - 1);//函数开始传入的left=0，right= n - 1
+    return nums[n - k]; //最后找到了正确的位置 也就是n-k等于pivotIndex 这个位置的元素就是第k大的数
+};
+
+function partition(nums, left, right) {
+    let pivot = nums[right];             	//最右边的元素为基准
+    let pivotIndex = left;               	//pivotIndex初始化为left
+    for (let i = left; i < right; i++) { 	//遍历left到right-1的元素
+        if (nums[i] < pivot) {             	//如果当前元素比基准元素小
+            swap(nums, i, pivotIndex);       	//把它交换到pivotIndex的位置
+            pivotIndex++;                    	//pivotIndex往前移动一步
+        }
+    }
+    swap(nums, right, pivotIndex);       	//最后交换pivotIndex和right
+    return pivotIndex;                   	//返回pivotIndex
+}
+
+function swap(nums, p, q) {//交换数组中的两个元素
+    const temp = nums[p];
+    nums[p] = nums[q];
+    nums[q] = temp;
+}
+
+
+
+```
+
+
+
