121. 买卖股票的最佳时机|简单、高频

--- a/每周的题解/第二周.md
+++ b/每周的题解/第二周.md
@@ -239,8 +239,8 @@ class MinHeap {
     constructor() {
         this.heap = [];
     }
-    swap(i1, i2) {
-        [this.heap[i1], this.heap[i2]] = [this.heap[i2], this.heap[i1]];
+    swap(a, b) {
+        [this.heap[a], this.heap[b]] = [this.heap[b], this.heap[a]];
     }
     getParentIndex(i) {
         return (i - 1) >> 1;
@@ -358,9 +358,45 @@ function swap(nums, p, q) {//交换数组中的两个元素
     nums[q] = temp;
 }
 
-
-
 ```
 
 
+
+## [121. 买卖股票的最佳时机](https://leetcode.cn/problems/best-time-to-buy-and-sell-stock/)|简单、高频
+
+### 题目描述
+
+> 给定一个数组 prices ，它的第 i 个元素 prices[i] 表示一支给定股票第 i 天的价格。
+>
+> 你只能选择 某一天 买入这只股票，并选择在 未来的某一个不同的日子 卖出该股票。设计一个算法来计算你所能获取的最大利润。
+>
+> 返回你可以从这笔交易中获取的最大利润。如果你不能获取任何利润，返回 0 。
+
+### 解题思路
+
+获取最大利润，看起来就像贪心~
+
+只有一笔交易，那想要获取最多利润，那就是在最低点买，最高点卖。当然，两个点的出现时间要注意~
+
+其实很简单，在遍历的时候，记录到当前这个时间节点前的最低点价格即可。后面出现更高价格的时候，就与之相减再比较是否是最高利润，出现更低价格的时候就更新最低点价格。
+
+### 代码
+
+```js
+/**
+ * @param {number[]} prices
+ * @return {number}
+ */
+var maxProfit = function(prices) {
+    let min = prices[0], profit = 0
+    for(let i = 1; i < prices.length; i++){
+        if(prices[i] > prices[i-1]){
+            profit = Math.max(profit, prices[i] - min)
+        }else{
+            min = Math.min(min, prices[i])
+        }
+    }
+    return profit
+};
+```
 
