[5. 最长回文子串]dp中等、 O(n)偏难、中频

--- a/每周的题解/第二周.md
+++ b/每周的题解/第二周.md
@@ -400,3 +400,142 @@ var maxProfit = function(prices) {
 };
 ```
 
+## [5. 最长回文子串](https://leetcode.cn/problems/longest-palindromic-substring/)|中等、高频
+
+### 题目描述
+
+> 给你一个字符串 `s`，找到 `s` 中最长的回文子串。
+
+### 解题思路
+
+#### 暴力
+
+没啥好说的，O(n^3)
+
+#### dp
+
+`dp[i][j]`表示 `[i, j]`字符串可以形成回文，那么往两边延展一下，就可以有这样的转台转移
+
+```js
+if(s[i] === s[j] && dp[i+1][j-1]) dp[i+1][j-1] = true
+```
+
+时间复杂度O(n\^2)，空间复杂度O(n\^2)
+
+#### manacher 马拉车算法
+
+这是一个专门处理回文串的算法~
+
+1. 先对字符串进行**预处理**，两个字符之间加上特殊符号#
+2. 然后遍历整个字符串，用**一个数组来记录以该字符为中心的回文长度**，为了方便计算右边界，在数组中记录长度的一半（向下取整）
+3. 每一次遍历的时候，如果该字符在已知回文串最右边界的覆盖下，那么就计算其相对**最右边界**回文串中心对称的位置，得出已知回文串的长度
+4. 判断该长度和右边界，**如果达到了右边界，那么需要进行中心扩展探索**。当然，如果第3步该字符**没有在最右边界的“羽翼”下，则直接进行中心扩展探索。进行中心扩展探索的时候，同时又更新右边界**
+5. 最后得到最长回文之后，**去掉其中的特殊符号即可**
+
+时间复杂度的O(n)
+
+> 这个代码我不背真写不下来... 希望面试只回答出思路就够了...😂
+
+
+
+### 代码
+
+```javascript
+/**
+ * dp
+ * @param {string} s
+ * @return {string}
+ */
+var longestPalindrome = function (s) {
+	if (!s || !s.length) return "";
+	let res = s[0];
+	const dp = [];
+	// dp[i][] 依赖 dp[i-1][] --> 干脆反着遍历
+	for (let i = s.length - 1; i >= 0; i--) {
+		dp[i] = [];
+		for (let j = i; j < s.length; j++) {
+			if (j === i) dp[i][j] = true; // d[i][i] 一个字符当然回文
+			else if (j === i + 1 && s[i] === s[j]) dp[i][j] = true; //dp[i][i+1]
+			else if (s[i] === s[j] && dp[i + 1][j - 1]) dp[i][j] = true;
+			// 有更长的就要更新
+			if (dp[i][j] && j - i + 1 > res.length) res = s.slice(i, j + 1);
+		}
+	}
+	return res;
+};
+
+/**
+ * dp
+ * @param {string} s
+ * @return {string}
+ */
+var longestPalindrome = function (s) {
+	if (!s || !s.length) return "";
+	let res = s[0];
+	const dp = [];
+	// dp[i][] 依赖 dp[i-1][] --> 干脆反着遍历
+	for (let i = s.length - 1; i >= 0; i--) {
+		dp[i] = [];
+		for (let j = i; j < s.length; j++) {
+			if (j === i) dp[i][j] = true; // d[i][i] 一个字符当然回文
+			else if (j === i + 1 && s[i] === s[j]) dp[i][j] = true; //dp[i][i+1]
+			else if (s[i] === s[j] && dp[i + 1][j - 1]) dp[i][j] = true;
+			// 有更长的就要更新
+			if (dp[i][j] && j - i + 1 > res.length) res = s.slice(i, j + 1);
+		}
+	}
+	return res;
+};
+
+/**
+ * manacher
+ * @param {string} s
+ * @return {string}
+ */
+var longestPalindrome = function (s) {
+	const lens = s.length;
+	// 预处理字符数组
+	let str = "#";
+	for (let i = 0; i < lens; i++) {
+		str = str + s[i] + "#";
+	}
+	// 当前回文子串能到达的右边界和它的中心
+	let mid = 0,
+		right = 0;
+	// 最长的回文子串的中心和长度
+	let maxLen = 0,
+		maxLenMid = 0;
+	// child[i]: 以i为中心的最长回文
+	const child = [];
+	// 遍历处理过的字符串，以每个字符中心进行扩展
+	for (let i = 0; i < str.length; i++) {
+		// 第i个字符，如果在最右边界的羽翼下，就选择对称字符的回文长度
+		// 不在右边界内就赋值1
+		child[i] = i < right ? Math.min(child[2 * mid - i], right - i) : 1;
+		// 不论怎么样都要试一试暴力扩展
+		while (
+			i - child[i] >= 0 &&
+			i + child[i] < str.length &&
+			str.charAt(i + child[i]) == str.charAt(i - child[i])
+		) {
+			child[i]++;
+		}
+		// 更新右边界
+		if (right < child[i] + i) {
+			mid = i;
+			right = child[i] + i;
+		}
+		// 是否更新最长回文子串
+		if (maxLen < child[i]) {
+			maxLen = child[i];
+			maxLenMid = i;
+		}
+	}
+	return s.substring(
+		(maxLenMid + 1 - maxLen) / 2,
+		(maxLenMid - 1 + maxLen) / 2
+	);
+};
+
+
+```
