--- a/每周的题解/第二周.md
+++ b/每周的题解/第二周.md
@@ -539,3 +539,137 @@ var longestPalindrome = function (s) {
 
 
 ```
+
+## 141. 环形链表|简单、中频
+
+### 题目描述
+
+> 给你一个链表的头节点 head ，判断链表中是否有环。
+>
+> 如果链表中有某个节点，可以通过连续跟踪 next 指针再次到达，则链表中存在环。 为了表示给定链表中的环，评测系统内部使用整数 pos 来表示链表尾连接到链表中的位置（索引从 0 开始）。注意：pos 不作为参数进行传递 。仅仅是为了标识链表的实际情况。
+>
+> 如果链表中存在环 ，则返回 true 。 否则，返回 false 
+
+### 解题思路
+
+#### map
+
+遍历所有节点并记录，遇到以及记录过的节点就说明有环，直接`return`。如遍历完了都还没有`return`就说明没环。
+
+时间O(n)，空间O(n)
+
+代码简单，不写了
+
+#### 快慢指针
+
+两个指针，一开始都在 head
+
+- 快指针一次走两个节点
+- 慢指针一次走一个节点
+
+快指针绕一圈追上慢指针就说明有环~
+
+时间复杂度O(n),空间复杂度O(1)
+
+### 代码
+
+```js
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val) {
+ *     this.val = val;
+ *     this.next = null;
+ * }
+ */
+
+/**
+ * @param {ListNode} head
+ * @return {boolean}
+ */
+var hasCycle = function(head) {
+    let slow = head, fast = head
+    while(fast && fast.next){
+        slow = slow.next
+        fast = fast.next.next
+        if(fast == slow) return true
+    }
+    return false
+};
+```
+
+
+
+## [912. 排序数组](https://leetcode.cn/problems/sort-an-array/)|中等|手写排序算法
+
+### 题目描述
+
+> 给你一个整数数组 `nums`，请你将该数组升序排列。
+
+### 解题思路
+
+肯定不是考API啦，手写排序算法啦
+
+看题目的数据范围正负五万，总共十万，优先考虑O(n) 级别的算法~
+
+#### 计数排序
+
+> 准备一个待排序数组取值范围的数组，遍历待排序数组，将每个元素放到对应下标位置，值就是其出现的次数
+
+时间复杂度`O(n+k)`，空间复杂度`O(50000*2+1)`  (中值取值范围，或者说 为了下标不为负数的偏移`diff`)
+
+#### 快速排序
+
+每次将数组分为两半，一部分比 关键元素大，另一部分比关键元素小（小于等于）。然后递归~
+
+关键元素的选取方式有多种，一般我是最左边的那个，你可以选中间或者最右边或者随机
+
+时间复杂度`O(nlogn)`，空间复杂度`O(logn)`
+
+### 代码
+
+计数排序
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {number[]}
+ */
+var sortArray = function(nums) {
+    const diff = 50000
+    const counts = Array(diff * 2 + 1).fill(0)
+    const res = []
+    for(const a of nums) counts[a + diff]++
+    for(let i in counts){
+        while(counts[i]--) res.push(i - diff)
+    }
+    return res
+};
+```
+
+快速排序
+
+```js
+/**
+ * 快速排序
+ * @param {number[]} nums
+ * @return {number[]}
+ */
+var sortArray = function (nums) {
+	if (nums.length <= 1) return nums; //递归中止
+	const pivotIdx = Math.floor(nums.length / 2);
+	const pivot = nums.splice(pivotIdx, 1)[0];
+	const left = [],
+		right = [];
+	for (let num of nums) {
+		if (num < pivot) left.push(num);
+		else right.push(num);
+	}
+	return sortArray(left).concat([pivot], sortArray(right));
+};
+
+```
+
+
+
+
+
