129. 求根节点到叶节点数字之和|中等|递归|树|深搜|dfs

--- a/每周的题解/第二周.md
+++ b/每周的题解/第二周.md
@@ -1,8 +1,8 @@
-# 带你用JS 刷高频面试算法题|第一周|okkjoo-leetcodeHot-byJs
+# 带你用JS 刷高频面试算法题|第二周|okkjoo-leetcodeHot-byJs
 
-`okkjoo-leetcodeHot-byJs`带你用 JS 刷高频面试算法题~ 每周日更新~ 合集仓库：[okkjoo-leetcodeHot-byJs](https://github.com/okkjoo/okkjoo-leetcodeHot-byJs)
+`okkjoo-leetcodeHot-byJs`带你用 JS 刷高频面试算法题~ 每周日/周一更新~ 合集仓库：[okkjoo-leetcodeHot-byJs](https://github.com/okkjoo/okkjoo-leetcodeHot-byJs)
 
-这是第一周的刷题记录与题解分享，如果你已经按题型分类系统地刷了一遍算法面试题的各个题型，想感受一下面试题的”随机性”的话，欢迎一起~
+这是第二周的刷题记录与题解分享，如果你已经按题型分类系统地刷了一遍算法面试题的各个题型，想感受一下面试题的”随机性”的话，欢迎一起~
 
 # 上题
 
@@ -670,6 +670,49 @@ var sortArray = function (nums) {
 ```
 
 
+
+
+
+## [129. 求根节点到叶节点数字之和](https://leetcode.cn/problems/sum-root-to-leaf-numbers/)|中等|递归|树|深搜|dfs
+
+### 题目描述
+
+> 给你一个二叉树的根节点 root ，树中每个节点都存放有一个 0 到 9 之间的数字。
+> 每条从根节点到叶节点的路径都代表一个数字：
+>
+> 例如，从根节点到叶节点的路径 1 -> 2 -> 3 表示数字 123 。
+> 计算从根节点到叶节点生成的 所有数字之和 。
+>
+> 叶节点 是指没有子节点的节点
+
+### 解题思路
+
+简单的递归题，注意因为要存储节点深度方便计算该条路径的`“value”`，所以借助一个额外函数 dfs 进行递归
+
+```js
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val, left, right) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.left = (left===undefined ? null : left)
+ *     this.right = (right===undefined ? null : right)
+ * }
+ */
+/**
+ * @param {TreeNode} root
+ * @return {number}
+ */
+var sumNumbers = function (root) {
+	return dfs(root, 0);
+};
+const dfs = (node, cur) => {
+	if (node === null) return 0;
+	const v = node.val + cur * 10;
+	if (node.left === null && node.right === null) return v;
+	return dfs(node.left, v) + dfs(node.right, v);
+};
+
+```
 
 
 
