[704. 二分查找] |简单|二分

--- a/每周的题解/第三周.md
+++ b/每周的题解/第三周.md
@@ -71,3 +71,54 @@ const dfs = (grid, i, j) => {
 };
 ```
 
+## [704. 二分查找](https://leetcode.cn/problems/binary-search/)|简单|二分
+
+### 题目描述
+
+> 给定一个 n 个元素有序的（升序）整型数组 nums 和一个目标值 target  ，写一个函数搜索 nums 中的 target，如果目标值存在返回下标，否则返回 -1。
+>
+
+### 解题思路
+
+题目就告诉你了，要 `logn` 的二分查找~
+
+粗略的二分步骤：
+
+1. [left, right]
+2. 左右指针，取左右指针中值 
+3. 取到的值
+   1. 大于 target 就将右指针位移到中值位置 (-1)
+   2. 小于就将左指针移到中值位置 (+1)
+4. 直到找到 or 遍历完
+
+### 代码
+
+```js
+/*
+ * @lc app=leetcode.cn id=704 lang=javascript
+ *
+ * [704] 二分查找
+ */
+
+// @lc code=start
+/**
+ * @param {number[]} nums
+ * @param {number} target
+ * @return {number}
+ */
+var search = function (nums, target) {
+	let left = 0,
+		right = nums.length - 1;
+	while (left <= right) {
+		const mid = Math.floor(right - left) + left / 2;
+		const v = nums[mid];
+		if (v == target) return mid;
+		else if (v > target) right = mid - 1;
+		else if (v < target) left = mid + 1;
+	}
+	return -1;
+};
+// @lc code=end
+
+```
+
