[21. 合并两个有序链表] 简单|递归|链表

--- a/每周的题解/第三周.md
+++ b/每周的题解/第三周.md
@@ -122,3 +122,45 @@ var search = function (nums, target) {
 
 ```
 
+## [21. 合并两个有序链表](https://leetcode.cn/problems/merge-two-sorted-lists/)|简单|递归|链表
+
+### 题目描述
+
+> 将两个升序链表合并为一个新的升序链表并返回。新链表是通过拼接给定的两个链表的所有节点组成的。 
+
+### 解题思路
+
+比较两个链表头部的值，谁的小都先放进去，返回一个有序的链表
+
+其实这里真的挺妙的，看起来没有排序的代码，实际上藏在递归之中，每次归都是返回的 其实就是 **排序好的了**
+
+时间复杂度O(n),空间复杂度O(n)，n 为两个链表长度的合
+
+```js
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val, next) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.next = (next===undefined ? null : next)
+ * }
+ */
+/**
+ * @param {ListNode} list1
+ * @param {ListNode} list2
+ * @return {ListNode}
+ */
+var mergeTwoLists = function (list1, list2) {
+	if (list1 === null) return list2;
+	if (list2 === null) return list1;
+	if (list1.val < list2.val) {
+		list1.next = mergeTwoLists(list1.next, list2);
+		return list1;
+	} else {
+		list2.next = mergeTwoLists(list1, list2.next);
+		return list2;
+	}
+};
+```
+
+
+
