[300. 最长递增子序列] |中等|dp|

--- a/每周的题解/第三周.md
+++ b/每周的题解/第三周.md
@@ -164,3 +164,40 @@ var mergeTwoLists = function (list1, list2) {
 
 
 
+## [300. 最长递增子序列](https://leetcode.cn/problems/longest-increasing-subsequence/)|中等|dp|二分查找
+
+### 题目描述
+
+> 给你一个整数数组 `nums` ，找到其中最长严格递增子序列的长度。
+>
+> **子序列** 是由数组派生而来的序列，删除（或不删除）数组中的元素而不改变其余元素的顺序。例如，`[3,6,2,7]` 是数组 `[0,3,1,6,2,2,7]` 的子序列。
+
+### 解题思路
+
+- `dp[i]`: 包括i 的之前最长递增子序列
+- 状态转移：dp[i] = max(dp[i], dp[j] + 1)   	(前提：nums[i] > nums[j])
+  - j 从 0 到 i -1 各个位置的最长递增子序列长度 最大值 + 1
+- dp[i] 的初始值都为1
+
+每一次都要看看 res 要不要更新
+
+### 代码
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {number}
+ */
+var lengthOfLIS = function (nums) {
+	let dp = Array(nums.length).fill(1);
+	let res = 1;
+	for (let i = 1; i < nums.length; i++) {
+		for (let j = 0; j < i; j++) {
+			nums[i] > nums[j] && (dp[i] = Math.max(dp[i], dp[j] + 1));
+		}
+		res = Math.max(res, dp[i]);
+	}
+	return res;
+};
+```
+
