[322. 零钱兑换] |贪心|动态规划|dp

--- a/每周的题解/第三周.md
+++ b/每周的题解/第三周.md
@@ -201,3 +201,75 @@ var lengthOfLIS = function (nums) {
 };
 ```
 
+## [322. 零钱兑换](https://leetcode.cn/problems/coin-change/)|中等|动态规划|dp|贪心
+
+### 题目描述
+
+> 给你一个整数数组 `coins` ，表示不同面额的硬币；以及一个整数 `amount` ，表示总金额。
+>
+> 计算并返回可以凑成总金额所需的 **最少的硬币个数** 。如果没有任何一种硬币组合能组成总金额，返回 `-1` 。
+>
+> 你可以认为每种硬币的数量是无限的。
+
+### 解题思路
+
+#### 直接贪心是错误的！
+
+要求最少硬币个数，贪心地想自然就是先拿面值大的硬币，也就是让 `amount - cnt` 尽量快地变小
+
+cnt 就是当前拿了的全部硬币的值
+
+但是纯贪心的不一定对的，比如`[1,6,10]`，`amount = 12`，你从最大开始，就会是一个10，两个1，总共三个硬币。而实际上直接两个6就能达到目标~
+
+#### 暴力枚举
+
+如果是暴力枚举，计算所有组合... 那时间复杂度想当之高~ 这是不值得考虑的
+
+#### dp
+
+暴力枚举之所以复杂度高，就是因为大部分的情况会重复出现多次，那么我们将重复出现的子问题记录下来即可了。
+
+用 dp 数组将其存储下来，也有叫记忆化递归的，没差
+
+- 定义：`dp[i][j]`就是拿前j个硬币来组成金额 i 的最少个数
+- 状态转移：
+  -  `dp[i][j]=min(dp[i][j-1], dp[i - coins[j-1]][j] + 1)`
+    - 选了也要和`之前不选j 就能组成i` 的情况比较一下，选j的话就是 ，金额为`i-coins[j-1]`（也就是还没有选第j个硬币)时 + 1(选j)
+
+时间复杂度`O(coins.length*amonut)`，空间同上
+
+同时可以发现，`dp[i][j]`只与`dp[i][j - 1]`和 `dp[i - coins[j]][j] + 1)`有关，可以将其优化为一维。
+
+- `dp[i]`表示 金额为 i 的时候，需要的最少硬币数
+- 初始化 `dp[0]=0`
+- 状态转移：
+  - 不拿第j个  `dp[i]`
+  - 拿第j个 `dp[i - coins[j]] + 1`
+
+> 其实就是完全背包问题
+
+### 代码
+
+```js
+/**
+ * @param {number[]} coins
+ * @param {number} amount
+ * @return {number}
+ */
+var coinChange = function (coins, amount) {
+	if (amount === 0) return 0;
+	const dp = Array(amount + 1).fill(Number.MAX_VALUE);
+	dp[0] = 0;
+	for (let i = 1; i < dp.length; i++) {
+		for (let j = 0; j < coins.length; j++) {
+			if (i - coins[j] >= 0) {
+				dp[i] = Math.min(dp[i], dp[i - coins[j]] + 1);
+			}
+		}
+	}
+	return dp[dp.length - 1] === Number.MAX_VALUE ? -1 : dp[dp.length - 1];
+};
+```
+
+
+
