[22. 括号生成] |中等|回溯|剪枝

--- a/每周的题解/第三周.md
+++ b/每周的题解/第三周.md
@@ -273,3 +273,50 @@ var coinChange = function (coins, amount) {
 
 
 
+## [22. 括号生成](https://leetcode.cn/problems/generate-parentheses/)|中等|回溯|剪枝
+
+### 题目描述
+
+> 数字 n 代表生成括号的对数，请你设计一个函数，用于能够生成所有可能的并且 有效的 括号组合。
+
+### 解题思路
+
+关键词：
+
+- 所有的
+- 可能的
+- 有效的
+- 组合
+
+一眼回溯 
+
+回溯必备的优化手段：剪枝，那么这里应该怎么剪枝？
+
+#### 怎么剪枝
+
+要求括号组合，那么左右两个括号的数量必然相等
+
+1. 前面出现的左括号小于出现的右括号，比如这样 `(())))`，绝对是错误的，已经没机会了
+2. 什么情况是有效的：左括号数= 右括号数 = n
+
+### 代码
+
+```js
+/**
+ * @param {number} n
+ * @return {string[]}
+ */
+var generateParenthesis = function (n) {
+	const res = [];
+	//l r s：左右括号个数、当前构造出的字符串
+	const dfs = (l, r, s) => {
+		if (l == n && r == n) return res.push(s);
+		if (l < r) return;
+		if (l < n) dfs(l + 1, r, s + "(");
+		if (r < l) dfs(l, r + 1, s + ")");
+	};
+	dfs(0, 0, "");
+	return res;
+};
+```
+
