[54. 螺旋矩阵]矩阵|模拟|数组

--- a/每周的题解/第三周.md
+++ b/每周的题解/第三周.md
@@ -320,3 +320,67 @@ var generateParenthesis = function (n) {
 };
 ```
 
+## [54. 螺旋矩阵](https://leetcode.cn/problems/spiral-matrix/)|矩阵|模拟|数组
+
+### 题目描述
+
+> 给你一个 `m` 行 `n` 列的矩阵 `matrix` ，请按照 **顺时针螺旋顺序** ，返回矩阵中的所有元素。
+
+### 解题思路
+
+就是一圈一圈往里面走，那么就要有四个变量 ：
+
+- top
+- botton
+- left
+- right
+
+来告诉遍历指针能走到哪里
+
+每走完一圈，left++、top++、right--、bottom--
+
+
+
+时间复杂度O(mn)，空间复杂度O(1)
+
+### 代码
+
+```js
+/**
+ * @param {number[][]} matrix
+ * @return {number[]}
+ */
+var spiralOrder = function (matrix) {
+	if (!matrix.length || !matrix[0].length) return [];
+	const rows = matrix.length,
+		cols = matrix[0].length;
+	const order = [];
+	let left = 0,
+		right = cols - 1,
+		top = 0,
+		bottom = rows - 1;
+	while (left <= right && top <= bottom) {
+		// →
+		for (let col = left; col <= right; col++) {
+			order.push(matrix[top][col]);
+		}
+		//↓
+		for (let row = top + 1; row <= bottom; row++) {
+			order.push(matrix[row][right]);
+		}
+		if (left < right && top < bottom) {
+			//←
+			for (let col = right - 1; col > left; col--) {
+				order.push(matrix[bottom][col]);
+			}
+			//↑
+			for (let row = bottom; row > top; row--) {
+				order.push(matrix[row][left]);
+			}
+		}
+		[left, right, top, bottom] = [left + 1, right - 1, top + 1, bottom - 1];
+	}
+	return order;
+};
+```
+
