[剑指 Offer 10- I. 斐波那契数列] )|简单|递归|记忆化搜索|dp

--- a/每周的题解/第四周.md
+++ b/每周的题解/第四周.md
@@ -50,5 +50,65 @@ var inorderTraversal = function (root) {
 };
 ```
 
+## [剑指 Offer 10- I. 斐波那契数列](https://leetcode.cn/problems/fei-bo-na-qi-shu-lie-lcof/)|简单|递归|记忆化搜索|dp
+
+### 题目描述
+
+> 写一个函数，输入 n ，求斐波那契（Fibonacci）数列的第 n 项（即 F(N)）。斐波那契数列的定义如下：
+>
+> >  F(0) = 0,   F(1) = 1
+> > F(N) = F(N - 1) + F(N - 2), 其中 N > 1.
+> > 斐波那契数列由 0 和 1 开始，之后的斐波那契数就是由之前的两数相加而得出。
+>
+> 答案需要取模 1e9+7（1000000007），如计算初始结果为：1000000008，请返回 1。
+>
+
+### 解题思路
+
+#### 递归
+
+一眼看上去，不就是递归就好了，直接按照定义写一个函数开始递归。但是这当然不会考那么简单，很容易发现这里面充满了重复的子问题，多次递归中都会重复计算相同的某个`F(n)`
+
+#### 记忆化
+
+那么我们将重复的直接存下来不就好了，创建一个数组来存储计算过的值。每次需要对应的值时先查找是否计算过，计算过就直接用就好了。没计算过再进行计算
+
+#### dp
+
+然后我们又发现，这个定义不就是 dp 里面的状态转移方程嘛
+
+- `dp[i]`表示其代表 斐波那契 第i个数字
+- 状态转移方程就是定义
+- 初始化 前两个数字就好了
+  - 第0个就是0
+
+甚至因为不需要存储以前的数据，实际上只需要三个变量就可以完成了，空间复杂度O(1)
+
+
+
+#### 求余
+
+这里要注意的是，他还说了需要取模，取模其实就是求余~  他说对结果取模，你可不能真到最后返回结果的时候取模，要在每一步 sum 发生变化的时候取模
+
+### 代码
+
+```js
+/**
+ * @param {number} n
+ * @return {number}
+ */
+var fib = function (n) {
+	let a = 0,
+		b = 1,
+		c = 0;
+	for (let i = 0; i < n; i++) {
+		c = (a + b) % 1000000007;
+		a = b;
+		b = c;
+	}
+	return a;
+};
+```
+
 
 
