[104. 二叉树的最大深度]|简单|二叉树|递归

--- a/每周的题解/第四周.md
+++ b/每周的题解/第四周.md
@@ -112,3 +112,62 @@ var fib = function (n) {
 
 
 
+## [104. 二叉树的最大深度](https://leetcode.cn/problems/maximum-depth-of-binary-tree/)|简单|二叉树|递归
+
+###  题目描述
+
+> 给定一个二叉树，找出其最大深度。
+>
+> 二叉树的深度为根节点到最远叶子节点的最长路径上的节点数。
+>
+> 说明: 叶子节点是指没有子节点的节点。
+
+### 解题思路
+
+解决二叉树问题最好先想递归方法，真的好使，一个DFS就好了
+
+不过可以扩展一下思路，求深度 用 队列来 BFS  也是不错的。
+
+1. 用特殊元素划分每一层
+2. 或者在进入下一层之前记录当前队列的长度
+
+### 代码
+
+```js
+/**
+ * DFS
+ * @param {TreeNode} root
+ * @return {number}
+ */
+var maxDepth = function (root) {
+	if (!root) return 0;
+	if (!root.left && !root.right) return 1;
+	return Math.max(maxDepth(root.left), maxDepth(root.right)) + 1;
+};
+```
+
+```js
+/**
+ * BFS
+ * @param {TreeNode} root
+ * @return {number}
+ */
+var maxDepth = function (root) {
+	if (!root) return 0;
+	if (!root.right && !root.left) return 1;
+	let cur = root;
+	const que = [root, null];
+	let level = 1;
+	while ((cur = que.shift()) !== undefined) {
+		if (cur === null) {
+			if (que.length === 0) return level;
+			level++;
+			que.push(null);
+			continue;
+		}
+		cur.left && que.push(cur.left);
+		cur.right && que.push(cur.right);
+	}
+};
+```
+
