--- a/每周的题解/第四周.md
+++ b/每周的题解/第四周.md
@@ -171,3 +171,54 @@ var maxDepth = function (root) {
 };
 ```
 
+## [695. 岛屿的最大面积](https://leetcode.cn/problems/max-area-of-island/)|中等|DFS
+
+### 题目描述
+
+> ```
+> 给你一个大小为 m x n 的二进制矩阵 grid 。
+> 
+> 岛屿 是由一些相邻的 1 (代表土地) 构成的组合，这里的「相邻」要求两个 1 必须在 水平或者竖直的四个方向上 相邻。你可以假设 grid 的四个边缘都被 0（代表水）包围着。
+> 
+> 岛屿的面积是岛上值为 1 的单元格的数目。
+> 
+> 计算并返回 grid 中最大的岛屿面积。如果没有岛屿，则返回面积为 0 
+> 
+> ```
+
+### 解题思路
+
+小岛问题，DFS 遍历图真是太常用了，直接将访问过的小岛置为0，节省 vis 数组空间
+
+### 代码
+
+```js
+/**
+ * @param {number[][]} grid
+ * @return {number}
+ */
+var maxAreaOfIsland = function (grid) {
+	const d = [
+		[1, 0],
+		[-1, 0],
+		[0, 1],
+		[0, -1],
+	];
+	const m = grid.length,
+		n = grid[0].length;
+	const dfs = (x, y) => {
+		if (x < 0 || y < 0 || x >= m || y >= n || grid[x][y] === 0) return 0;
+		grid[x][y] = 0;
+		let cnt = 1; //这里从1开始而不是从0..
+		for (let i = 0; i < 4; i++) cnt += dfs(x + d[i][0], y + d[i][1]);
+		return cnt;
+	};
+	let res = 0;
+	for (let i = 0; i < m; i++)
+		for (let j = 0; j < n; j++) {
+			res = Math.max(res, dfs(i, j));
+		}
+	return res;
+};
+```
+
