--- a/每周的题解/第四周.md
+++ b/每周的题解/第四周.md
@@ -1,5 +1,5 @@
-> `okkjoo-leetcodeHot-byJs`带你用 JS 刷高频面试算法题~ 每周一更新~ 合集仓库：[okkjoo-leetcodeHot-byJs](https://github.com/okkjoo/okkjoo-leetcodeHot-byJs)
-> 如果你已经按题型分类系统地刷了一遍算法面试题的各个题型，想感受一下面试题的”随机性”的话，欢迎一起~
+`okkjoo-leetcodeHot-byJs`带你用 JS 刷高频面试算法题~ 每周一更新~ 合集仓库：[okkjoo-leetcodeHot-byJs](https://github.com/okkjoo/okkjoo-leetcodeHot-byJs)
+如果你已经按题型分类系统地刷了一遍算法面试题的各个题型，想感受一下面试题的”随机性”的话，欢迎一起~
 
 
 
@@ -220,5 +220,126 @@ var maxAreaOfIsland = function (grid) {
 		}
 	return res;
 };
+```
+
+## [146. LRU 缓存](https://leetcode.cn/problems/lru-cache/)|设计|哈希表|链表|双向链表
+
+### 题目描述
+
+> 运用你所掌握的数据结构，设计和实现一个 LRU (最近最少使用) 缓存机制 。
+>
+> 实现 `LRUCache` 类：
+>
+> - `LRUCache(int capacity)` 以正整数作为容量 `capacity` 初始化 LRU 缓存
+> - `int get(int key)` 如果关键字 `key` 存在于缓存中，则返回关键字的值，否则返回 -1 。
+> - `void put(int key, int value)` 如果关键字已经存在，则变更其数据值；如果关键字不存在，则插入该组「关键字-值」。当缓存容量达到上限时，它应该在写入新数据之前删除最久未使用的数据值，从而为新的数据值留出空间。
+>
+> **进阶**：你是否可以在 `O(1)` 时间复杂度内完成这两种操作？
+
+### 解题思路
+
+选择数据结构：
+
+1. 有序，用链表或者数组
+2. O(1)的增删——链表，这里干脆上双向链表，方便，也不差这点空间
+3. O(1) 的查 —— 哈希表，这里我们直接用 对象就好了
+
+操作：
+
+1. put：检查哈希表，查看是否存在
+   1. 存在：
+      1. 更新值
+      2. 更新其位置到链表头部
+         1. 具体更新，就是 remove 了再 append
+   2. 不存在，就先检查容量：
+      1. 容量不够：
+         1. 删除链表尾部节点
+         2. 生成新节点到链表头部
+      2. 容量未满：
+         1. 生成新节点到链表头部
+
+2. get：检查哈希表，查看是否存在
+   1. 存在：返回对应的值，并且将其更新位置到链表头部
+   2. 不存在：返回-1
+
+### 代码
+
+> 原来题目模板给的原型链形式太难受，为啥不直接上 class？
+
+```js
+class _node {
+	constructor(key, value) {
+		this.key = key;
+		this.value = value;
+		this.next = null;
+		this.prev = null;
+	}
+}
+
+class LRUCache {
+	constructor(capacity) {
+		this.capacity = capacity;
+		this.mp = {};
+		this.size = 0;
+		this.head = new _node();
+		this.tail = new _node();
+		this.head.next = this.tail;
+		this.tail.prev = this.head;
+	}
+
+	get(key) {
+		let node = this.mp[key];
+		if (node == null) return -1;
+		this.remove(node);
+		this.append(node);
+		return node.value;
+	}
+
+	put(key, value) {
+		let node = this.mp[key];
+		if (node == null) {
+			if (this.size == this.capacity) {
+				let tail = this.removeTail();
+				delete this.mp[tail.key];
+				this.size--;
+			}
+			let newNode = new _node(key, value);
+			this.mp[key] = newNode;
+			this.append(newNode);
+			this.size++;
+		} else {
+			node.value = value;
+			this.remove(node);
+			this.append(node);
+		}
+	}
+
+	remove(node) {
+		let pre = node.prev;
+		let nxt = node.next;
+		pre.next = nxt;
+		nxt.prev = pre;
+	}
+	//默认就加到队头
+	append(node) {
+		node.prev = this.head;
+		node.next = this.head.next;
+		this.head.next.prev = node;
+		this.head.next = node;
+	}
+
+	removeTail() {
+		let tail = this.tail.prev;
+		this.remove(tail);
+		return tail;
+	}
+}
+
+/**
+ * Your LRUCache object will be instantiated and called as such:
+ * var obj = new LRUCache(capacity)
+ * var param_1 = obj.get(key)
+ * obj.put(key,value)
+ */
 ```
 
