--- a/每周的题解/第四周.md
+++ b/每周的题解/第四周.md
@@ -343,3 +343,43 @@ class LRUCache {
  */
 ```
 
+## [剑指 Offer 22. 链表中倒数第k个节点](https://leetcode.cn/problems/lian-biao-zhong-dao-shu-di-kge-jie-dian-lcof/)|简单|链表|双指针
+
+### 题目描述
+
+> 输入一个链表，输出该链表中倒数第k个节点。为了符合大多数人的习惯，本题从1开始计数，即链表的尾节点是倒数第1个节点。
+>
+> 例如，一个链表有 6 个节点，从头节点开始，它们的值依次是 1、2、3、4、5、6。这个链表的倒数第 3 个节点是值为 4 的节点。
+
+### 解题思路
+
+经典快慢指针就好了，先让快指针先走 k 步，然后慢指针再开始走。（都是一个一个走）当快指针到达链表尾节点，慢指针就到倒数第k个节点了
+
+```js
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val) {
+ *     this.val = val;
+ *     this.next = null;
+ * }
+ */
+/**
+ * @param {ListNode} head
+ * @param {number} k
+ * @return {ListNode}
+ */
+var getKthFromEnd = function (head, k) {
+	let fast = head,
+		slow = head;
+	while (k--) {
+		fast = fast.next;
+	}
+	while (fast) {
+		fast = fast.next;
+		slow = slow.next;
+	}
+	return slow;
+};
+
+```
+
