[209. 长度最小的子数组]|中等|滑动窗口|双指针

--- a/每周的题解/第四周.md
+++ b/每周的题解/第四周.md
@@ -355,6 +355,8 @@ class LRUCache {
 
 经典快慢指针就好了，先让快指针先走 k 步，然后慢指针再开始走。（都是一个一个走）当快指针到达链表尾节点，慢指针就到倒数第k个节点了
 
+### 代码
+
 ```js
 /**
  * Definition for singly-linked list.
@@ -380,6 +382,67 @@ var getKthFromEnd = function (head, k) {
 	}
 	return slow;
 };
+
+```
+
+## [209. 长度最小的子数组](https://leetcode.cn/problems/minimum-size-subarray-sum/)|中等|滑动窗口|双指针
+
+### 题目描述
+
+> 给定一个含有 n 个正整数的数组和一个正整数 target 。
+>
+> 找出该数组中满足其和 ≥ target 的长度最小的 连续子数组 [numsl, numsl+1, ..., numsr-1, numsr] ，并返回其长度。如果不存在符合条件的子数组，返回 0 。
+>
+
+### 解题思路
+
+连续子数组 + 和 大于 target，想想滑动窗口~
+
+先让右边界右移，当总和大于 target，就收缩左边界看看总和还能不能大于 target
+
+注意更新 最短长度的时机
+
+以及 right 指针的遍历范围
+
+时间复杂度O(n)，空间复杂度O(1)
+
+### 代码
+
+```js
+/*
+ * @lc app=leetcode.cn id=209 lang=javascript
+ *
+ * [209] 长度最小的子数组
+ */
+
+// @lc code=start
+/**
+ * @param {number} target
+ * @param {number[]} nums
+ * @return {number}
+ */
+var minSubArrayLen = function (target, nums) {
+	if (nums.length === 0) return 0;
+	let left = 0,
+		right = 0,
+		len = 0;
+	let cnt = 0,
+		ans = 0;
+	for (; right < nums.length + 1; right++) {
+		//注意这里 right 要跑到 length，不然最后一步会不收缩左边界
+		while (cnt >= target) {
+			if (ans === 0 || len < ans) {
+				ans = len;
+			}
+			cnt -= nums[left++];
+			len--;
+		}
+		len++;
+		cnt += nums[right];
+	}
+	return ans;
+};
+// @lc code=end
 
 ```
 
