[42. 接雨水]|困难| 双数组|双指针|

--- a/每周的题解/第四周.md
+++ b/每周的题解/第四周.md
@@ -446,3 +446,123 @@ var minSubArrayLen = function (target, nums) {
 
 ```
 
+## [42. 接雨水](https://leetcode.cn/problems/trapping-rain-water/)|困难| 双数组|双指针| 
+
+### 题目描述
+
+> 给定 `n` 个非负整数表示每个宽度为 `1` 的柱子的高度图，计算按此排列的柱子，下雨之后能接多少雨水。
+
+### 解题思路
+
+> 之前学校天梯赛选拔就出了这题...当时没ac...唉，要是当时写出来了，说不定现在还在研究算法竞赛，就还没开始彻底开始前端之路哈哈
+
+要求下雨后能装多少水，有坑的地方才能装水嘛
+
+#### 暴力思路
+
+一个x坐标能接多少水，要看自己的高度 `height[x]`，以及左右两侧柱子中最大值中的较小的那个值。（有点绕，可以结合题目中的图理解一下）
+
+也就是：
+
+- 能接的水 =  水位 - 自己的高度
+- 自己的高度 = 题目给的 height
+- 水位 = min(leftMax, rightMax)
+
+那你暴力遍历每个坐标也还需要这两个值... 所以还要数组存一下 `leftMax` 和 `rightMax`...
+
+#### 双数组
+
+那就先用数组存下来
+
+> 下面会更新为双指针节省空间
+
+`leftMax[i]`就表示 i 左边的最高柱子的高度，leftMax 就从左边开始遍历， rightMax 就从右边开始遍历
+
+时间复杂度O(n)，空间复杂度O(n)。
+
+#### 双指针
+
+看代码就会发现，遍历了三次，左边一次，右边一次，累积和起来一次
+
+那能不能把左右一次合在一起？也就是说，前面我们是一次遍历算一个柱子，双指针，我们一次直接算两个柱子接的水。
+
+两个柱子一起，也是和前面一样，要知道两个柱子左右两边最大值的较小值。
+
+让两个柱子分别为 i、j。就会有
+
+- ileftMax
+- irightMax
+- jleftMax
+- jrightMax
+
+假设 j > i，那么 j 就在 i 的右边，那么肯定的：
+
+- jleftMax >= i leftMax
+- irhgtMax >= jRightMax
+
+>  前面说一次直接算两个柱子可能有点误解，或许应该说是 一次遍历中 两边柱子轮流接水
+
+具体怎么轮流？
+
+取决于哪个自身的高度比较矮，比如 i 比较矮，那就是接 i ，水位取哪一个？取 ileftMax。j 也一样
+
+
+
+也就是 要维护的两个变量    ileftMax  jrightMax 。双指针 i、j，从两头向中间走就好了
+
+>  官方题解里的 leftMax 就是最左边的 —— ileftMax，rightMax 就是最右边的 jrightMax
+>
+> 可能这时候看解释还是有点绕 我也不知道怎么表达比较好.. 但是看代码然后结合官方题解里的动画应该能理解
+
+时间复杂度O(n)，空间复杂度O(1)
+
+> 其他解法都是时间复杂度为 O(n)，空间复杂度为O(n)，这里就不学了
+
+### 代码
+
+双数组
+
+```js
+var trap = function (height) {
+	let ans = 0;
+	const leftMax = [],
+		rightMax = [];
+	let tmx = 0; //临时记录当前最高柱子
+	for (let i = 0; i < height.length; i++) {
+		leftMax[i] = tmx = Math.max(tmx, height[i]);
+	}
+	tmx = 0;
+	for (let i = height.length - 1; i >= 0; i--) {
+		rightMax[i] = tmx = Math.max(tmx, height[i]);
+	}
+	for (let i = 0; i < height.length; i++) {
+		ans += Math.min(leftMax[i], rightMax[i]) - height[i];
+	}
+	return ans;
+};
+```
+
+双指针
+
+```js
+var trap = function (height) {
+	let ans = 0,
+		i = 0,
+		j = height.length - 1,
+		ileftMax = 0,
+		jrightMax = 0;
+	while (i < j) {
+		ileftMax = Math.max(ileftMax, height[i]);
+		jrightMax = Math.max(jrightMax, height[j]);
+		if (height[i] < height[j]) {
+			ans += ileftMax - height[i];
+			i++;
+		} else {
+			ans += jrightMax - height[j];
+			j--;
+		}
+	}
+	return ans;
+};
+```
+
