[718. 最长重复子数组]|dp

--- a/每周的题解/第五周.md
+++ b/每周的题解/第五周.md
@@ -59,3 +59,84 @@ var merge = function (intervals) {
 
 
 
+## [718. 最长重复子数组](https://leetcode-cn.com/problems/maximum-length-of-repeated-subarray)|dp
+
+### 题目描述
+
+> ```js
+> 给两个整数数组  A  和  B ，返回两个数组中公共的、长度最长的子数组的长度。
+> 
+> 示例 1:
+> 
+> 输入:
+> A: [1,2,3,2,1]
+> B: [3,2,1,4,7]
+> 输出: 3
+> 解释:
+> 长度最长的公共子数组是 [3, 2, 1]。
+> 说明:
+> 
+> 1 <= len(A), len(B) <= 1000
+> 0 <= A[i], B[i] < 100
+> ```
+
+### 解题思路
+
+关键点：
+
+- 公共
+- 最长
+- 子数组 **（子数组、字串是连续的喔**，子序列是保证相对顺序，可以删掉其中的一些
+
+求解两个东西之间的最大最小  可以马上联想到 动态规划 dp
+
+酱紫定义一下先：
+
+`dp[i][j]` 表示 `A[0-i] 和 B[0-j]` 公共、最长、子序列  的 **长度**
+
+首先肯定要双层循环  i、j，走完 全部的A、B 才能拿到答案
+
+循环中判断 ：
+
+- `A[i] === B[j]` => `dp[i][j] = dp[i-1][j-1] + 1 `
+- `A[i] !== B[j]` => 就是 0  初始化的时候就是了 ，所以实际代码中可以不管
+  - ans 在每一步中都要取最大的
+
+
+
+时间和空间复杂度都为 O(m+n)，m、n 分别为 A、B 的大小
+
+
+
+### 代码
+
+> 还踩了 一个 JS 二维数组初始化的坑
+
+```js
+/**
+ * @param {number[]} nums1
+ * @param {number[]} nums2
+ * @return {number}
+ */
+var findLength = function (nums1, nums2) {
+	const m = nums1.length,
+		n = nums2.length;
+	let ans = 0;
+	// 直接像下面这样初始化 二维数组中的数组都是同一个引用，所以是不行的！
+	// let dp = Array(m + 1).fill(Array(n + 1).fill(0));
+	const dp = new Array(m + 1);
+	for (let i = 0; i <= m; i++) {
+		dp[i] = new Array(n + 1).fill(0);
+	}
+	for (let i = 1; i <= m; i++) {
+		for (let j = 1; j <= n; j++) {
+			if (nums1[i - 1] === nums2[j - 1]) {
+				dp[i][j] = dp[i - 1][j - 1] + 1;
+			}
+			ans = Math.max(ans, dp[i][j]);
+		}
+	}
+	return ans;
+};
+```
+
