--- a/每周的题解/第五周.md
+++ b/每周的题解/第五周.md
@@ -140,3 +140,43 @@ var findLength = function (nums1, nums2) {
 };
 ```
 
+## [226. 翻转二叉树](https://leetcode-cn.com/problems/invert-binary-tree)|二叉树
+
+### 题目描述
+
+给你一棵二叉树的根节点 `root` ，翻转这棵二叉树，并返回其根节点。
+
+### 解题思路
+
+- 递归 或者 栈 或者 队列
+- 交换左右子树
+
+### 代码
+
+```js
+/**
+ * @param {TreeNode} root
+ * @return {TreeNode}
+ */
+var invertTree = function (root) {
+	if (!root) return root;
+	/* 递归
+	const left = root.left,
+		right = root.right;
+	root.left = invertTree(right);
+	root.right = invertTree(left);
+	return root; */
+	const stk = [root];
+	let cur;
+	while ((cur = stk.shift())) {
+		const left = cur.left,
+			right = cur.right;
+		cur.left = right;
+		cur.right = left;
+		left && stk.push(left);
+		right && stk.push(right);
+	}
+	return root;
+};
+```
+
