[384. 打乱数组]|Fisher-Yates 洗牌算法

--- a/每周的题解/第五周.md
+++ b/每周的题解/第五周.md
@@ -180,3 +180,68 @@ var invertTree = function (root) {
 };
 ```
 
+## [384. 打乱数组](https://leetcode-cn.com/problems/shuffle-an-array)|Fisher-Yates 洗牌算法
+
+### 题目描述
+
+```
+给你一个整数数组 nums ，设计算法来打乱一个没有重复元素的数组。打乱后，数组的所有排列应该是 等可能 的。
+
+实现 Solution class:
+
+Solution(int[] nums) 使用整数数组 nums 初始化对象
+int[] reset() 重设数组到它的初始状态并返回
+int[] shuffle() 返回数组随机打乱后的结果
+
+```
+
+### 解题思路
+
+所有排列等可能，也就是所有元素出现在某个位置的概率相等
+
+- 对于下标为 0位置，从 `[0, n - 1][0,n−1] `随机一个位置进行交换，共有 n 种选择；下标为 1 的位置，从 `[1, n - 1][1,n−1] `随机一个位置进行交换，共有 n - 1  种选择 
+
+
+
+### 代码
+
+```js
+/**
+ * @param {number[]} nums
+ */
+var Solution = function (nums) {
+	this.nums = nums;
+	this.original = [...nums];
+};
+
+/**
+ * @return {number[]}
+ */
+Solution.prototype.reset = function () {
+	this.nums = [...this.original];
+	return this.nums;
+};
+
+/**
+ * @return {number[]}
+ */
+Solution.prototype.shuffle = function () {
+	function swap(arr, i, j) {
+		const c = arr[j];
+		(arr[j] = arr[i]), (arr[i] = c);
+	}
+	for (let i = 0; i < this.nums.length; i++) {
+		const j = i + Math.floor(Math.random() * (this.nums.length - i));
+		swap(this.nums, i, j);
+	}
+	return this.nums;
+};
+
+/**
+ * Your Solution object will be instantiated and called as such:
+ * var obj = new Solution(nums)
+ * var param_1 = obj.reset()
+ * var param_2 = obj.shuffle()
+ */
+```
+
